test/errors/unclosed_paren.sg
' Test unclosed parenthesis
(:= test (foo bar)